# space-ranger

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  fs.rs  highlight.rs  input.rs  main.rs  markdown.rs
src/app/: mod.rs  nav.rs  preview.rs  search.rs
src/ui/: hints.rs  mod.rs  modal.rs  preview.rs  search.rs  theme.rs  tree.rs
